testsetup/httpbin.yaml
# httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: default
spec:
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpbin
  namespace: default
  labels:
    app: httpbin
spec:
  containers:
    - name: httpbin
      image: docker.io/kennethreitz/httpbin
      ports:
        - containerPort: 80
